2011-01-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
	* configure,
	  configure.in,
	  src/Makefile.in,
	  Makefile.common.in,
	  src/port.mk,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCClrange.c,
	  src/z80/z80.h,
	  src/z80/main.c,
	  src/z80/ralloc.h,
	  src/z80/ralloc.c,
	  src/z80/tree_dec.hh,
	  src/z80/ralloc2.cc,
	  src/z80/peeph-z80.def:
	  New register allocator for the Z80.

2011-01-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCglobl.h:
	  Use bool from stdbool.h, except for MSVC, where unsigned char is used. For #3150686.

2011-01-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.h,
	  src/SDCCval.c,
	  src/SDCCsymt.c:
	  Changed class to xclass in sym_link for C++ compability, for #3150686.

2011-01-11 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (geniCodeAdd): fixed bug 3153956
	* support/regression/tests/bug3037889.c: added test for bug 3153956

2010-12-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/simi.c (waitForSim): implemented timeout,
	  (openSimulator): use non-blocking socket mode

2010-12-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c (commonSetUserBp): fixed bug 1185014

2010-12-19 Borut Razem <borut.razem AT siol.net>

	* src/ds390/main.c, src/Makefile.in, src/SDCCbuild_cmd.c,
	  src/SDCCbuild_cmd.h, src/SDCCmain.c, src/src.dsp, src/z80/main.c:
	  support/Util/BuildCmed.[ch] moved / renamed to src/SDCCbuild_cmd.[ch]

2010-12-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c (printOrSetSymValue),
	* debugger/mcs51/simi.h (memcache_t),
	* debugger/mcs51/simi.c (getMemCache, getMemString, simSetValue,
	  simGetValue): made size unsigned
	  (init_winsock): fixed uninitialized iResult,
	  (openSimulator): removed intptr_t cast
	* debugger/mcs51/sdcdb.c: include <direct.h> for chdir(),
	  (parseCmdLine): access() is not portable, replaced with fopen/fclose,