@@ -1,4 +1,9 @@
 2011-01-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+	* src/z80/ralloc.c,
+	  src/z80/ralloc2.cc:
+	  Use new register allocator for the GBZ80.
+
+2011-01-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 	* configure,
 	  configure.in,
 	  src/Makefile.in,
